# CS_senior_thesis

./: README.md
experiments/: pyproject.toml
experiments/experiments/: evaluate.py  similarity_eval.py  utils.py
experiments/experiments/data/: copynet.msg  corec.msg
experiments/tests/: test_experiments.py
experiments/train/: copy_only.ipynb
experiments/train/combined_data/: test.tsv  test_example.tsv  valid.tsv
