[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["bagashvilit <bagashvilit@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
allennlp = "^2.9.3"
pandas = "^1.4.2"
pingouin = "^0.5.1"
typer = "^0.4.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
evaluate = "experiments.evaluate:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
